finalizes basic css to close No. 31

--- a/maplight_finance/templates/detail.html
+++ b/maplight_finance/templates/detail.html
@@ -71,16 +71,16 @@
                     <dd>{{ total_support | currency }}</dd>
                 </dl>
             </div>
+            <div class="rule-style-left"></div>
             <div class="oppose-total">
                 <dl class="align-right">
                     <dt>Amount total</dt>
                     <dd>{{ total_opposition | currency }}</dd>
                 </dl>
             </div>
-            <div class="rule-style"></div>
+            <div class="rule-style-right"></div>
         </aside>
     </div>
-    <div class="rule-style"></div>
     <footer class="clearfix">
         <div class="text">
             <ol>
