--- a/maplight_finance/static/css/styles.css
+++ b/maplight_finance/static/css/styles.css
@@ -36,13 +36,13 @@ section.display ol li:last-child { border-bottom: 0px solid #000; }
 
 section.display ol li dl { position: relative; font-size: 13px; width: 100%; }
 
-.support section.display ol li dl dt { color: Crimson; width: 65%; text-align: left; float: left; }
+.support section.display ol li dl dt { width: 65%; text-align: left; float: left; }
 
-.support section.display ol li dl dd { color: Black; width: 20%; text-align: right; float: right; font-size: 13px; font-family: "proxima-nova", "Avenir Next", "Avenir", "Lucida Grande", "Corbel", "Tahoma", Arial, sans-serif; }
+.support section.display ol li dl dd { width: 20%; text-align: right; float: right; font-family: "proxima-nova", "Avenir Next", "Avenir", "Lucida Grande", "Corbel", "Tahoma", Arial, sans-serif; font-weight: 900; }
 
-.oppose section.display ol li dl dt { color: Crimson; width: 65%; text-align: right; float: right; }
+.oppose section.display ol li dl dt { width: 65%; text-align: right; float: right; }
 
-.oppose section.display ol li dl dd { color: Black; width: 20%; text-align: left; float: left; font-size: 13px; font-family: "proxima-nova", "Avenir Next", "Avenir", "Lucida Grande", "Corbel", "Tahoma", Arial, sans-serif; }
+.oppose section.display ol li dl dd { width: 20%; text-align: left; float: left; font-family: "proxima-nova", "Avenir Next", "Avenir", "Lucida Grande", "Corbel", "Tahoma", Arial, sans-serif; font-weight: 900; }
 
 .support-contributor-totals,
 .oppose-contributor-totals { position: absolute; z-index: 15; margin-bottom: .5%; color: #999999; font-size: 12px; font-family: "proxima-nova", "Avenir Next", "Avenir", "Lucida Grande", "Corbel", "Tahoma", Arial, sans-serif; font-weight: 900; text-transform: uppercase; }
@@ -52,51 +52,16 @@ section.display ol li dl { position: relative; font-size: 13px; width: 100%; }
 .oppose-contributor-totals { right: 1%; bottom: 0; }
 
 /* display of total contributions */
-aside.totals { background: #ffffff; width: 100%; height: 30px; margin-top: 10px; color: #000; padding-bottom: 1px; z-index: 6; }
+aside.totals { background: none; width: 100%; height: 60px; margin-top: 0px; color: #000; padding-bottom: 5px; position: relative; z-index: 6; }
 
 aside.totals .support-total,
-aside.totals .oppose-total { background: none; width: 10%; min-height: 25px; z-index: 30; }
+aside.totals .oppose-total { background: none; width: 10%; min-height: 25px; height: auto; margin: 15px 0 0 0; }
 
-
-aside.totals .support-total { position: absolute; left: 0; bottom: 0; }
-aside.totals .oppose-total { position: absolute; right: 0; bottom: 0; }
+aside.totals .support-total { float: left; margin-right: 0; }
+aside.totals .oppose-total { float: right; margin-left: 0; }
 
 aside.totals .support-total dl,
-aside.totals .oppose-total dl { background: #ffffff; }
-
-
-.rule-style {
-    width: 100%;
-    height: 1px;
-    background: #000000;
-    z-index: 4;
-    display: inline-block;
-    position: relative;
-    bottom: 0px;
-}
-
-.rule-style:before {
-    display: block;
-    position: absolute;
-    left: -4px;
-    top: -4px;
-    width: 8px;
-    height: 8px;
-    border-radius: 4px;
-}
-
-/*
-aside.totals .rule-style:after {
-    display: block;
-    position: absolute;
-    right: -4px;
-    top: -4px;
-    width: 8px;
-    height: 8px;
-    background: black;
-    border-radius: 4px;
-}
-*/
+aside.totals .oppose-total dl { background: none; }
 
 aside.totals div dl { width: 100%; text-align: center; }
 
@@ -104,10 +69,14 @@ aside.totals div dl dt { color: #999999; font-size: 12px; font-family: "proxima-
 
 aside.totals div dl dd { color: #000; font-size: 20px; font-weight: 900; }
 
-aside.totals footer { margin-top: 20px; color: #e6e6e6; padding-bottom: 1%; }
+.rule-style-left,
+.rule-style-right { width: 35.2%; height: 1px; background: #000000; margin-top: 40px; }
 
+.rule-style-left { float: left; }
 
-.chart-container { width: 10%; height: 200px; margin: -2% 45% 0 45%; z-index: 5; position: absolute;}
+.rule-style-right { float: right; }
+
+.chart-container { width: 10%; height: 200px; margin: -2% 45% 0 45%; position: absolute; z-index: 5; }
 
 .chart-container svg { background: none; z-index: 5;
 
@@ -119,7 +88,6 @@ aside.totals footer { margin-top: 20px; color: #e6e6e6; padding-bottom: 1%; }
     */
 
 }
-
 
 footer { background: #ffffff; width: 100%; height: auto; margin: 20px 0 0 0; padding-bottom: 20px; border-bottom: 5px solid #000; }
 
@@ -135,12 +103,8 @@ footer .text ol li dl dt { width: 50%; text-align: left; float: left; text-trans
 
 footer .text ol li dl dd { width: 30%; text-align: right; float: right;  }
 
-
-
-
-
-
 footer .logo { width: 49%; margin-right: 1%; display: block-inline; float: right; }
+
 footer .logo img { float: right; width: 200px;}
 
 /* misc typography */
