updates to the responsive nature of the css and markup and writes function to re-size chart on page re-size

--- a/maplight_finance/templates/detail.html
+++ b/maplight_finance/templates/detail.html
@@ -63,7 +63,7 @@
                 <h3 class="align-right">Total contributors: {{ count_opposing }}</h3>
             </aside>
         </div>
-        <div class="chart-container"></div>
+        <div id="chart-container"></div>
         <aside class="totals clearfix">
             <div class="support-total">
                 <dl class="align-left">
