updates to css bulletproofing and removes some url conventions to aid in the build process

--- a/maplight_finance/templates/detail.html
+++ b/maplight_finance/templates/detail.html
@@ -98,7 +98,7 @@
             </li>
         </div>
         <div class="logo">
-            <img src="{% static 'images/maplight_logo_partner.png' %}" />
+            <img src="..{% static 'images/maplight_logo_partner.png' %}" />
         </div>
     </footer>
 {% endblock %}
