--- a/maplight_finance/templates/base.html
+++ b/maplight_finance/templates/base.html
@@ -40,8 +40,8 @@
         <!-- end meta -->
 
         <!-- begin css -->
-        <link href="{% static 'css/reset.css' %}" media="screen" rel="stylesheet" type="text/css" />
-        <link href="{% static 'css/styles.css' %}" media="screen" rel="stylesheet" type="text/css" />
+        <link href="..{% static 'css/reset.css' %}" media="screen" rel="stylesheet" type="text/css" />
+        <link href="..{% static 'css/styles.css' %}" media="screen" rel="stylesheet" type="text/css" />
         {% block css_overrides %}{% endblock %}
         <!-- end css -->
 
@@ -73,8 +73,8 @@
 
         <!-- begin scripts -->
         <script src="http://projects.scpr.org/static/static-files/v3-dependencies/scripts/modernizr-2.5.3.min.js"></script>
-        <script src="{% static 'scripts/d3.js' %}"></script>
-        <script src="{% static 'scripts/app.js' %}"></script>
+        <script src="..{% static 'scripts/d3.js' %}"></script>
+        <script src="..{% static 'scripts/app.js' %}"></script>
         <!-- end scripts -->
 
         <!-- begin chartbeat -->
