--- a/maplight_finance/templates/detail.html
+++ b/maplight_finance/templates/detail.html
@@ -67,10 +67,19 @@
                 </section>
             </div>
             <aside class="support-contributor-totals">
-                <h3 class="align-left">Total contributors: {{ count_supporting }}</h3>
+                {% if supporting_contributions.0.total == 0.00 %}
+                    <h3 class="align-left">Total contributors: 0</h3>
+                {% else %}
+                    <h3 class="align-left">Total contributors: {{ count_supporting }}</h3>
+                {% endif %}
             </aside>
             <aside class="oppose-contributor-totals">
-                <h3 class="align-right">Total contributors: {{ count_opposing }}</h3>
+                {% if opposing_contributions.0.total == 0.00 %}
+                    <h3 class="align-right">Total contributors: 0</h3>
+                    <dd></dd>
+                {% else %}
+                    <h3 class="align-right">Total contributors: {{ count_opposing }}</h3>
+                {% endif %}
             </aside>
         </div>
         <div id="chart-container"></div>
