--- a/election_profiles/templates/election_profiles/base.html
+++ b/election_profiles/templates/election_profiles/base.html
@@ -23,9 +23,9 @@
         <meta property="og:title" content="{% block og_title %}{% endblock %}" />
         <meta property="og:site_name" content="{% block og_site_name %}{% endblock %}" />
         <meta property="og:type" content="{% block og_type %}{% endblock %}" />
-        <meta property="og:image" content="http://projects.scpr.org/static-files/v3-dependencies/images/kpcc-og-twitter-logo.png" />
-        <meta property="og:image:width" content="500" />
-        <meta property="og:image:height" content="500" />
+        <meta property="og:image" content="http://a.scpr.org/i/4dabc93f211d3934ba5fa6ab130434a3/39566-full.jpg" />
+        <meta property="og:image:width" content="1024" />
+        <meta property="og:image:height" content="371" />
         <meta property="og:url" content="{% block og_url %}{% endblock %}" />
         <meta property="og:description" content="{% block og_description %}{% endblock %}" />
         <meta name="twitter:card" content="summary"/>
