--- a/election_profiles/templates/election_profiles/detail.html
+++ b/election_profiles/templates/election_profiles/detail.html
@@ -82,6 +82,11 @@
                             <p><span class="glyphicon glyphicon-link"></span>&nbsp;&nbsp;<a href="{{ object.questions_url }}" target="_blank"> Q&amp;A with SmartVoter</a></p>
                         </div>
                     {% endif %}
+                    {% if object.kpcc_qa_url %}
+                        <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                            <p><span class="glyphicon glyphicon-link"></span>&nbsp;&nbsp;<a href="{{ object.kpcc_qa_url }}" target="_blank"> Q&amp;A with KPCC</a></p>
+                        </div>
+                    {% endif %}
                 </div>
             </div>
         </div>
