--- a/election_profiles/templates/election_profiles/index.html
+++ b/election_profiles/templates/election_profiles/index.html
@@ -26,6 +26,7 @@
     <link href="http://projects.scpr.org/static/static-files/css/jquery-alerts/jquery.alerts.css" rel="stylesheet" type="text/css" media="all" />
     <link href=".{% static 'css/main-foundation-style-v3.css' %}" media="screen" rel="stylesheet" type="text/css" />
     <link href=".{% static 'css/election-style.css' %}" media="screen" rel="stylesheet" type="text/css" />
+    <link href=".{% static 'css/ie-style.css' %}" media="screen" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 {% block data_details %}
@@ -160,5 +161,5 @@
     <script>
         window.appConfig = {% app_config_object object_list.config_object %};
     </script>
-    <script src="{% static 'scripts/_application_wrapper_0.5.js' %}"></script>
+    <script src=".{% static 'scripts/_application_wrapper_0.5.js' %}"></script>
 {% endblock %}
