--- a/election_profiles/templates/election_profiles/index.html
+++ b/election_profiles/templates/election_profiles/index.html
@@ -85,6 +85,7 @@
                     <li><a href="#9">LAUSD School Board District 3</a></li>
                     <li><a href="#10">LAUSD School Board District 5</a></li>
                     <li><a href="#11">LAUSD School Board District 7</a></li>
+                    <li><a href="#12">LA City Ballot Measures</a></li>
                 </ul>
             </div>
         </div>
@@ -152,6 +153,21 @@
                     </div>
                 {% endif %}
             {% endfor %}
+        {% endfor %}
+        <h3 id="12">LA City Ballot Measures</h3>
+        {% for measure in object_list.measures %}
+            {% if measure.city == "City of Los Angeles" %}
+                <div class="row" id="representative-container">
+                    <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9" id="representative-bio">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
+                                <h4>{{ measure.measure_number }}</h4>
+                                <p>{{ measure.city }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            {% endif %}
         {% endfor %}
     </div>
 {% endblock %}
