Completes layout for ballot measures on index.html

--- a/election_profiles/templates/election_profiles/index.html
+++ b/election_profiles/templates/election_profiles/index.html
@@ -162,8 +162,25 @@
                         <div class="row">
                             <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12">
                                 <h4>{{ measure.measure_number }}</h4>
-                                <p>{{ measure.city }}</p>
                             </div>
+                        </div>
+                        <div style="width:100%;float:left;">
+                            <h6>{{ measure.measure_name }}</h6>
+                            {% if measure.measure_type %}
+                                <p class="credit">{{ measure.measure_type }}</p>
+                            {% endif %}
+                            {% if measure.description %}
+                                <p>{{ measure.description }}</p>
+                            {% else %}
+                                <p><em>Description not available</em></p>
+                            {% endif %}
+                        </div>
+                        <div class="row" style="clear:left;">
+                            {% if measure.measure_url %}
+                                <div class="col-xs-6 col-sm-6 col-md-4 col-lg-4">
+                                    <p><span class="glyphicon glyphicon-link"></span>&nbsp;&nbsp;<a href="{{ measure.measure_url }}" target="_blank">Analysis at SmartVoter.org</a></p>
+                                </div>
+                            {% endif %}
                         </div>
                     </div>
                 </div>
