tries to fix the embed option available on the cities ballot list

--- a/election_profiles/templates/election_profiles/allcontests.html
+++ b/election_profiles/templates/election_profiles/allcontests.html
@@ -125,6 +125,7 @@
 {% block super_js %}
     <script>
         window.appConfig = {% app_config_object object_list.config_object %};
+        window.appConfig.embed_this = false;
     </script>
     <script src="..{% static 'scripts/_application_wrapper_0.5.js' %}"></script>
 {% endblock %}
