--- a/elections_spring2015/templates/elections_spring2015/los-angeles-index.html
+++ b/elections_spring2015/templates/elections_spring2015/los-angeles-index.html
@@ -24,8 +24,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" />
     <link href="http://projects.scpr.org/static/static-files/v3-dependencies/css/jquery-ui.1.10.3.css" rel="stylesheet" type="text/css" media="all" />
     <link href="http://projects.scpr.org/static/static-files/css/jquery-alerts/jquery.alerts.css" rel="stylesheet" type="text/css" media="all" />
-    <link href="..{% static '/static/css/main-foundation-style-v3.css' %}" media="screen" rel="stylesheet" type="text/css" />
-    <link href="..{% static '/static/css/election-style.css' %}" media="screen" rel="stylesheet" type="text/css" />
+    <!--<link href="..{% static '/static/css/main-foundation-style-v3.css' %}" media="screen" rel="stylesheet" type="text/css" />
+    <link href="..{% static '/static/css/election-style.css' %}" media="screen" rel="stylesheet" type="text/css" />-->
+    <link href="..{% static 'css/main-foundation-style-v3.css' %}" media="screen" rel="stylesheet" type="text/css" />
+    <link href="..{% static 'css/election-style.css' %}" media="screen" rel="stylesheet" type="text/css" />
 {% endblock %}
 
 {% block data_details %}
@@ -65,7 +67,7 @@
                 {% if candidate.contest == race %}
                     <div class="row" id="representative-container">
                         <div class="col-xs-12 col-sm-4 col-md-3 col-lg-3" id="representative-image">
-                            <img class="responsive" src="..{% static '/static/images/' %}{{ candidate.candidate|image_path }}" />
+                            <img class="responsive" src="..{% static 'images/' %}{{ candidate.candidate|image_path }}" />
                         </div>
                         <div class="col-xs-12 col-sm-8 col-md-9 col-lg-9" id="representative-bio">
                             <div class="row">
