--- a/cali_water/templates/cali_water/base.html
+++ b/cali_water/templates/cali_water/base.html
@@ -1,4 +1,4 @@
-{% load static %}
+{% load staticfiles %}
 {% load cali_water_template_tags %}
 
 <!DOCTYPE html>
@@ -12,7 +12,7 @@
         <!-- begin meta -->
         <title>{% block title %}{% endblock %} | scpr.org</title>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.5, user-scalable=yes" />
         <meta name="apple-mobile-web-app-capable" content="yes" />
         <meta name="apple-mobile-web-app-status-bar-style" content="black" />
         <meta name="format-detection" content="telephone=no"/>
@@ -24,9 +24,9 @@
         <meta property="og:title" content="{% block og_title %}{% endblock %}" />
         <meta property="og:site_name" content="{% block og_site_name %}{% endblock %}" />
         <meta property="og:type" content="{% block og_type %}{% endblock %}" />
-        <meta property="og:image" content="http://projects.scpr.org/static-files/v3-dependencies/images/kpcc-og-twitter-logo.png" />
-        <meta property="og:image:width" content="500" />
-        <meta property="og:image:height" content="500" />
+        <meta property="og:image" content="http://a.scpr.org/i/f44ef3b9a8278abb79b6bbb3caf882c7/87989-full.jpg" />
+        <meta property="og:image:width" content="1024" />
+        <meta property="og:image:height" content="683" />
         <meta property="og:url" content="{% block og_url %}{% endblock %}" />
         <meta property="og:description" content="{% block og_description %}{% endblock %}" />
         <meta name="twitter:card" content="summary"/>
@@ -35,13 +35,19 @@
         <meta name="twitter:site" content="KPCC"/>
         <meta name="twitter:title" content="{% block twitter_title %}{% endblock %}"/>
         <meta name="twitter:description" content="{% block twitter_description %}{% endblock %}"/>
-        <meta name="twitter:image:src" content="http://projects.scpr.org/static-files/v3-dependencies/images/kpcc-og-twitter-logo.png">
+        <meta name="twitter:image:src" content="http://a.scpr.org/i/f44ef3b9a8278abb79b6bbb3caf882c7/87989-full.jpg">
         <link rel="shortcut icon" href="http://media.scpr.org/favicon.ico" type="image/x-icon" />
         <link rel="apple-touch-icon" href="http://media.scpr.org/assets/images/icon.png">
         <!-- end meta -->
 
         <!-- begin css -->
+        <link href="{{ STATIC_URL }}cali_water/css/reset.css" media="screen" rel="stylesheet" type="text/css" />
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/css/bootstrap.min.css" rel="stylesheet" />
+        <link href="http://projects.scpr.org/static/static-files/v3-dependencies/css/jquery-ui.1.10.3.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="http://projects.scpr.org/static/static-files/css/jquery-alerts/jquery.alerts.css" rel="stylesheet" type="text/css" media="all" />
+        <link href="{{ STATIC_URL }}cali_water/css/main-foundation-style-v3.css" media="screen" rel="stylesheet" type="text/css" />
         {% block super_css %}{% endblock %}
+        <link href="{{ STATIC_URL }}cali_water/css/cali-water-style.css" media="screen" rel="stylesheet" type="text/css" />
         <!-- end css -->
 
         <!-- html5 shim and respond.js ie8 support of html5 elements and media queries -->
@@ -49,8 +55,8 @@
             <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/3.6.2/html5shiv.js"></script>
             <script src="//cdnjs.cloudflare.com/ajax/libs/respond.js/1.3.0/respond.js"></script>
             <link href="http://projects.scpr.org/static/static-files/v3-dependencies/respond-proxy/respond-proxy.html" id="respond-proxy" rel="respond-proxy" />
-            <link href="..{% static 'respond-proxy/respond.proxy.gif' %}" id="respond-redirect" rel="respond-redirect" />
-            <script src="..{% static 'respond-proxy/respond.proxy.js' %}"></script>
+            <link href="{{ STATIC_URL }}cali_water/respond-proxy/respond.proxy.gif" id="respond-redirect" rel="respond-redirect" />
+            <script src="{{ STATIC_URL }}cali_water/respond-proxy/respond.proxy.js"></script>
         <![endif]-->
 
         <!-- begin base scripts -->
@@ -141,6 +147,8 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.0.0/js/bootstrap.min.js"></script>
         <script src="http://projects.scpr.org/static/static-files/v3-dependencies/scripts/underscore-min.js"></script>
         <script src="http://projects.scpr.org/static/static-files/v3-dependencies/scripts/backbone-min-v1.0.js"></script>
+        {% block config_js %}{% endblock %}
+        <script src="{{ STATIC_URL }}cali_water/scripts/_application_wrapper_0.5.js"></script>
         {% block super_js %}{% endblock %}
         <!-- end scripts -->
 
